...
    content: @Composable (Modifier) -> Unit,
) {
    val slotTag = when {
        cameraDirection == CameraDirection.Rear && isPrimary -> "rear_main_preview"
        cameraDirection == CameraDirection.Front && isPrimary -> "front_main_preview"
        cameraDirection == CameraDirection.Rear -> "rear_inset_preview"
        else -> "front_inset_preview"
    }
    val coroutineScope = rememberCoroutineScope()
    var draggingOffset by remember(slotTag) { mutableStateOf<Offset?>(null) }
    var userSnapAnimationRunning by remember(slotTag) { mutableStateOf(false) }
    val animatedInsetOffset = remember(slotTag) {
        Animatable(
...
